fix: scorrimento di tutte le ore e rowspan 1

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <div class="header" style="background-image:url('assets/div.png');">
+		<div class="logo">
+			<img src="assets/logoNEW.png">
+		</div>
+	</div>
   <app-root></app-root>
 </body>
 </html>
