fix: style & logo

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,17 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <div class="header" style="background-image:url('assets/div.png');">
+  <header style="background-image:url('assets/div.png');">
 		<div class="logo">
 			<img src="assets/logoNEW.png">
 		</div>
-	</div>
+	</header>
   <app-root></app-root>
+  <footer id="bottom" class="row fixed-bottom" style="text-align: right">
+    <div class="col-12" >
+      <a href="https://github.com/giacomocolle-ittbuonarroti/orariobp">Credits: prof. Giacomo Colle 2023</a>
+    </div>
+  </footer>
+  
 </body>
 </html>
